--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Transportes Britax</title>
+    <title>Transportes Easy Think</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Transportes Britax" name="keywords">
-    <meta content="Transportes Britax" name="description">
+    <meta content="Transportes Easy Think" name="keywords">
+    <meta content="Transportes Easy Think" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -31,9 +31,9 @@
         <div class="row py-2 px-lg-5">
             <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center text-white">
-                    <small><i class="fa fa-phone-alt mr-2"></i>+012 345 6789</small>
+                    <small><i class="fa fa-phone-alt mr-2"></i>+569 7887 1767</small>
                     <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i>Contacto@transportesbritax.cl</small>
+                    <small><i class="fa fa-envelope mr-2"></i>Contacto@transporteseasythink.cl</small>
                 </div>
             </div>
             <div class="col-lg-6 text-center text-lg-right">
@@ -64,7 +64,7 @@
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
-                <h1 class="m-0 display-5 text-uppercase text-primary"><i class="fa fa-truck mr-2"></i>BRITAX</h1>
+                <h1 class="m-0 display-5 text-uppercase text-primary"><i class="fa fa-truck mr-2"></i>EASY THINK</h1><!--LOGO-->
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -117,7 +117,7 @@
                 <div class="col-lg-7">
                     <h6 class="text-primary text-uppercase font-weight-bold">Acerca de Nosotros</h6>
                     <h1 class="mb-4">Proveedor de servicios logísticos más rápido y de confianza</h1>
-                    <p class="mb-4">Transportes Britax es una empresa de transporte terrestre de encomiendas con más de 5 años de experiencia en el mercado. Nos especializamos en el transporte de encomiendas de todo tipo, desde documentos y paquetes pequeños hasta mercancías voluminosas.
+                    <p class="mb-4">Transportes Easy Think es una empresa de transporte terrestre de encomiendas con más de 5 años de experiencia en el mercado. Nos especializamos en el transporte de encomiendas de todo tipo, desde documentos y paquetes pequeños hasta mercancías voluminosas.
 
                         Contamos con una flota moderna y equipada, así como con un equipo de profesionales experimentados que se encargarán de que tus envíos lleguen a su destino en perfecto estado.
                         
@@ -217,9 +217,9 @@
                 <div class="row">
                     <div class="col-md-6 mb-5">
                         <h3 class="text-primary mb-4">Ponte en Contacto</h3>
-                        <p><i class="fa fa-map-marker-alt mr-2"></i>Transportes Britax, Stgo</p>
-                        <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
-                        <p><i class="fa fa-envelope mr-2"></i>contacto@transportesbritax.cl</p>
+                        <p><i class="fa fa-map-marker-alt mr-2"></i>Transportes Easy Think, Stgo</p>
+                        <p><i class="fa fa-phone-alt mr-2"></i>+569 7887 1767</p>
+                        <p><i class="fa fa-envelope mr-2"></i>contacto@transporteseasythink.cl</p>
                         <div class="d-flex justify-content-start mt-4">
                             <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -243,9 +243,9 @@
     <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: #3E3E4E !important;">
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">&copy; <a href="http://transportesbritax.cl/">transportesbritax.cl</a>. Todos los Derechos Reservados. 
+                <p class="m-0 text-white">&copy; <a href="http://transporteseasythink.cl/">transporteseasythink.cl</a>. Todos los Derechos Reservados. 
 				<br>
-				Diseñado por <a href="http://transportesbritax.cl/">Transportes Britax SPA</a>
+				Diseñado por <a href="http://transporteseasythink.cl/">Transportes Easy Think SPA</a>
                 </p>
             </div>
             <div class="col-lg-6 text-center text-md-right">
